--- a/claw-backend/Dockerfile
+++ b/claw-backend/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:22-alpine AS builder
+FROM node:22-slim AS builder
+
+RUN apt-get update -y && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -13,7 +15,9 @@ COPY src/ ./src/
 RUN npm run build
 
 # --- Production stage ---
-FROM node:22-alpine
+FROM node:22-slim
+
+RUN apt-get update -y && apt-get install -y openssl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
