--- a/openclaw-image/Dockerfile
+++ b/openclaw-image/Dockerfile
@@ -2,15 +2,21 @@ FROM node:22-slim
 
 RUN apt-get update -y && apt-get install -y openssl git && rm -rf /var/lib/apt/lists/*
 
-# Install OpenClaw globally (official method)
-RUN npm install -g openclaw@latest
+# Set up local prefix for node user to avoid permission issues with /usr/local
+ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
+ENV PATH=$PATH:/home/node/.npm-global/bin
 
-# Create openclaw config directory
-RUN mkdir -p /home/node/.openclaw && chown -R node:node /home/node
+RUN mkdir -p /home/node/.npm-global && chown -R node:node /home/node
 
 WORKDIR /home/node
 
 USER node
+
+# Install OpenClaw globally in the node-owned prefix
+RUN npm install -g openclaw@latest
+
+# Create openclaw config directory
+RUN mkdir -p /home/node/.openclaw
 
 EXPOSE 4200
 
